Exclude env file and update instructions

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# Example application configuration. Copy this file to `.env`
+# and provide your own secret values.
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
