document env setup

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
+# Example application configuration. Copy this file to `.env`
+# and provide your own secret values.
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
+# After copying to `.env`, run `php artisan key:generate` to set a unique key.
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -68,3 +71,4 @@ DB_PORT=3306
 DB_DATABASE=your_database
 DB_USERNAME=your_username
 DB_PASSWORD=your_password
+# Replace the above placeholders with your production database credentials.
