Document deployment env file

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Example application configuration. Copy this file to `.env`
+# then run `php artisan key:generate` to set `APP_KEY`.
+# Provide your own secret values after copying.
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
