--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,19 @@
-# Example application configuration. Copy this file to `.env`
-# then run `php artisan key:generate` to set `APP_KEY`.
-# Provide your own secret values after copying.
+# ------------------------------------------------------------------------------
+# Application
+# ------------------------------------------------------------------------------
 
-# and provide your own secret values.
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-# After copying to `.env`, run `php artisan key:generate` to set a unique key.
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_NAME="HoliProjectIntranet"         # Remplace selon le nom que tu souhaites afficher
+APP_ENV=local                          # Passe en "production" une fois mis en ligne
+APP_KEY=                              # Laisse vide pour avoir la commande artisan key:generate
+APP_DEBUG=true                        # false en production
+APP_URL=http://intranet.holiproject.com  # URL publique de ton intranet
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
-APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
+APP_MAINTENANCE_DRIVER=file          # Garde "file" si tu n’utilises pas de store dédié
+# APP_MAINTENANCE_STORE=database      # À dé-commenter uniquement si tu utilises le driver "database"
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -26,12 +24,21 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# ------------------------------------------------------------------------------
+# Base de données MySQL
+# ------------------------------------------------------------------------------
+
 DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_HOST=127.0.0.1
+DB_PORT=3306
+
+DB_DATABASE=holiprojectcom_intranet_db
+DB_USERNAME=holiprojectcom_intranet_user
+DB_PASSWORD=cW8iZpZoujhBWWU        # ← Remplace "ton_mot_de_passe" par le vrai mot de passe MySQL
+
+# ------------------------------------------------------------------------------
+# Sessions / Cache / Files
+# ------------------------------------------------------------------------------
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -44,7 +51,7 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
-# CACHE_PREFIX=
+# CACHE_PREFIX=                      # Laisse vide ou définis un préfixe si besoin
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -53,14 +60,22 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
+# ------------------------------------------------------------------------------
+# Mail
+# ------------------------------------------------------------------------------
+
+MAIL_MAILER=log                 # "log" en local, ou "smtp" en production
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="noreply@holiproject.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
+# ------------------------------------------------------------------------------
+# AWS (si tu utilises S3, etc.)
+# ------------------------------------------------------------------------------
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -68,10 +83,8 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# ------------------------------------------------------------------------------
+# Frontend (Vite, etc.)
+# ------------------------------------------------------------------------------
+
 VITE_APP_NAME="${APP_NAME}"
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=your_database
-DB_USERNAME=your_username
-DB_PASSWORD=your_password
-# Replace the above placeholders with your production database credentials.
